--- a/Programmatic-UI-Xibs-Storyboards/PodcastCell.xib
+++ b/Programmatic-UI-Xibs-Storyboards/PodcastCell.xib
@@ -1,10 +1,44 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="podcastCell" id="EOX-Pv-Hw8" customClass="PodcastCell" customModule="Programmatic_UI_Xibs_Storyboards" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="565" height="120"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="DQe-pm-uzh">
+                <rect key="frame" x="0.0" y="0.0" width="565" height="120"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mic.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="ua3-8B-qLo">
+                        <rect key="frame" x="0.0" y="-0.5" width="120" height="120"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="120" id="CVw-d7-PhT"/>
+                            <constraint firstAttribute="width" constant="120" id="QXh-mL-WrH"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="ua3-8B-qLo" firstAttribute="leading" secondItem="DQe-pm-uzh" secondAttribute="leading" id="mBj-NN-zB5"/>
+                    <constraint firstItem="ua3-8B-qLo" firstAttribute="top" secondItem="DQe-pm-uzh" secondAttribute="top" id="qDy-Lk-kRp"/>
+                    <constraint firstAttribute="bottom" secondItem="ua3-8B-qLo" secondAttribute="bottom" id="qtf-cY-mRF"/>
+                </constraints>
+            </collectionViewCellContentView>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <size key="customSize" width="565" height="361"/>
+            <connections>
+                <outlet property="podcastImageView" destination="ua3-8B-qLo" id="wqk-Bf-viI"/>
+            </connections>
+            <point key="canvasLocation" x="222.46376811594206" y="65.959821428571431"/>
+        </collectionViewCell>
     </objects>
+    <resources>
+        <image name="mic.fill" catalog="system" width="54" height="64"/>
+    </resources>
 </document>
